# fastsgd

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sgd_test.ipynb
.github/workflows/: ci.yml
examples/: sgd_tutorial.ipynb
fastsgd/: __init__.py  covariance.py  explicit_sgd.py  family.py  glm.py  implicit_sgd.py  loss.py  m_loss.py  m_model.py  model.py  sgd.py  transfer.py  utils.py
fastsgd/learning_rate/: __init__.py  base.py  ddim.py  onedim.py  onedim_eig.py  value.py
sgd/: __main__.py  explicit_sgd.py  glm.py  implicit_sgd.py  m_loss.py  model.py  sgd.py
sgd/learning-rate/: base.py  value.py
sgd/learning_rate/: base.py  ddim.py  onedim.py  onedim_eig.py
tests/: helpers.py  test_covariance.py  test_family.py  test_glm.py  test_integration.py  test_learning_rate.py  test_loss.py  test_m_loss.py  test_m_model.py  test_model.py  test_sgd.py  test_transfer.py  test_utils.py
